# src/modules/auth/interfaces/Auth.controller.ts
@@ -1,5 +1,5 @@
-import { Controller, Post, Body, UseGuards, HttpCode, HttpStatus } from '@nestjs/common';
-import { ApiTags, ApiOperation, ApiResponse, ApiBearerAuth } from '@nestjs/swagger';
+import { Controller, Post, Body, HttpCode, HttpStatus } from '@nestjs/common';
+import { ApiTags, ApiOperation, ApiResponse } from '@nestjs/swagger';
 import { LoginUseCase } from '../application/use-cases/Login.usecase';
 import { RefreshTokenUseCase } from '../application/use-cases/RefreshToken.usecase';
 import { LoginRequestDto, LoginResponseDto } from '../application/dtos/Login.dto';
@@ -7,7 +7,6 @@ import {
   RefreshTokenRequestDto,
   RefreshTokenResponseDto,
 } from '../application/dtos/RefreshToken.dto';
-import { JwtRefreshGuard } from '../../../shared/guards/JwtRefresh.guard';
 
 @ApiTags('auth')
 @Controller('auth')
@@ -28,11 +27,9 @@ export class AuthController {
 
   @Post('refresh')
   @HttpCode(HttpStatus.OK)
-  @UseGuards(JwtRefreshGuard)
-  @ApiBearerAuth('JWT-auth')
   @ApiOperation({
     summary: 'Renovar tokens',
-    description: 'Renueva los tokens usando un refresh token válido',
+    description: 'Renueva los tokens usando un refresh token válido enviado en el body',
   })
   @ApiResponse({ status: 200, description: 'Tokens renovados exitosamente', type: RefreshTokenResponseDto })
   @ApiResponse({ status: 401, description: 'Refresh token inválido o expirado' })
